--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -7,17 +7,22 @@ slug: /mine-hnt/validators/monitoring
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-The Docker commands will assume you have the same prefix to get you executing a command within the docker: ```docker exec validator``` . If you want to make it easier, you can always create an alias such as: ```alias miner="docker exec validator miner"```.
+The Docker commands will assume you have the same prefix to get you executing a
+command within the docker: `docker exec validator` . If you want to make it
+easier, you can always create an alias such as:
+`alias miner="docker exec validator miner"`.
 
 ## Check the p2p network
 
-Perform a health check to see if your validator node can see other validators. 
+Perform a health check to see if your validator node can see other validators.
 
-Once your validator is running, perform an initial health check to verify you're connected to peers, your NAT type has been correctly identified, and that you have listen addresses:
+Once your validator is running, perform an initial health check to verify you're
+connected to peers, your NAT type has been correctly identified, and that you
+have listen addresses:
 
-Source: ```miner peer book -s```
+Source: `miner peer book -s`
 
-Docker: ```docker exec validator miner peer book -s```
+Docker: `docker exec validator miner peer book -s`
 
 :::note
 
@@ -25,35 +30,47 @@ It could take several minutes before the peers appear in the table.
 
 :::
 
-Once you have an address listed in ```listen_addrs``` and ```peers``` in the table at the bottom, you're connected to the p2p network.
+Once you have an address listed in `listen_addrs` and `peers` in the table at
+the bottom, you're connected to the p2p network.
 
 ## View block height
 
-When the genesis block is loaded, this query will work and return height 1 at least:
+When the genesis block is loaded, this query will work and return height 1 at
+least:
 
-Source: ```miner info height```
+Source: `miner info height`
 
-Docker: ```docker exec validator miner info height```
+Docker: `docker exec validator miner info height`
 
 If you’re syncing, something similar to the following should appear:
+
 ```
 ~$ docker exec validator miner info height
 14        449
 ```
 
-The first number is the **election epoch** and the second number is the **block height** of your validator.
+The first number is the **election epoch** and the second number is the **block
+height** of your validator.
 
-To be considered 'online' in [Explorer](https://explorer.helium.com/) and be eligible for election into a consensus group, your node must be **staked** and the **block height** needs to be caught up (within 100 blocks of the block height of the chain). You can view the current block height of the chain through the [Explorer](https://explorer.helium.com/). Block heights may sync slowly, it may take a few days if your validator is just coming online.
+To be considered 'online' in [Explorer](https://explorer.helium.com/) and be
+eligible for election into a consensus group, your node must be **staked** and
+the **block height** needs to be caught up (within 100 blocks of the block
+height of the chain). You can view the current block height of the chain through
+the [Explorer](https://explorer.helium.com/). Block heights may sync slowly, it
+may take a few days if your validator is just coming online.
 
 ## View p2p summary
 
-When your validator is running, you can check the summary of the connection, NAT, and block height. [These parameters are described in the Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide/#status-commands-to-run-on-the-validator-server).
+When your validator is running, you can check the summary of the connection,
+NAT, and block height.
+[These parameters are described in the Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide/#status-commands-to-run-on-the-validator-server).
 
-Source: ```miner info p2p_status```
+Source: `miner info p2p_status`
 
-Docker: ```docker exec validator miner info p2p_status```
+Docker: `docker exec validator miner info p2p_status`
 
 If you are properly connected and staked, it should look similar to this:
+
 ```
 ~$ docker exec validator miner info p2p_status
 +---------+------+
