--- a/docs/mine-hnt/validators/testnet/test-cases.mdx
+++ b/docs/mine-hnt/validators/testnet/test-cases.mdx
@@ -9,18 +9,20 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Perform the following test cases to help with testing:
 
-* Set up a wallet
-* Set up a validator node
-* Stake testnet network tokens (TNT) 
-* Observe wallet receives rewards
-* Unstake TNT, observe:
-    * no longer in consensus group
-    * no longer receiving rewards
-* Take validator offline
-    * prior to consensus group
-    * during consensus group
-* Restake owner wallet
-* Transfer ownership of stake to different validator node (same wallet, different wallet)
-* Set up wallet tied to multiple validator nodes
+- Set up a wallet
+- Set up a validator node
+- Stake testnet network tokens (TNT)
+- Observe wallet receives rewards
+- Unstake TNT, observe:
+  - no longer in consensus group
+  - no longer receiving rewards
+- Take validator offline
+  - prior to consensus group
+  - during consensus group
+- Restake owner wallet
+- Transfer ownership of stake to different validator node (same wallet,
+  different wallet)
+- Set up wallet tied to multiple validator nodes
 
-Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
+Use the `#validator` channel on our [Discord](https://discord.gg/helium) server
+to provide feedback and report issues.
